Актуальность нашего проекта
Вследствие неправильного выбора в ИТ-сфере, предприниматель расходует больше средств, 
следовательно, получает меньше прибыли, а нынешние методы оптимизации имеют существенные недостатки, 
поэтому мы хотели бы создать приложение, помогающее предпринимателям принимать рациональные решения.

--- a/Актуальность нашего проекта.md
+++ b/Актуальность нашего проекта.md
@@ -1,4 +1,2 @@
 # Актуальность нашего проекта
-## Вследствие неправильного выбора в ИТ-сфере, предприниматель расходует больше средств, 
-##следовательно, получает меньше прибыли, а нынешние методы оптимизации имеют существенные недостатки, 
-##поэтому мы хотели бы создать приложение, помогающее предпринимателям принимать рациональные решения.
+## Вследствие неправильного выбора в ИТ-сфере, предприниматель расходует больше средств, следовательно, получает меньше прибыли, а нынешние методы оптимизации имеют существенные недостатки, поэтому мы хотели бы создать приложение, помогающее предпринимателям принимать рациональные решения.
